--- a/CareerConnect/careerconnect.client/src/index.html
+++ b/CareerConnect/careerconnect.client/src/index.html
@@ -2,9 +2,10 @@
 <html lang="ro">
 <head>
   <meta charset="utf-8">
-  <title>CareerConnectClient</title>
+  <title>CareerConnect</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-signin-client_id" content="937265656787-unp24ld8lqsjbu8jh3rvmjct1i0d66ei.apps.googleusercontent.com">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
